# chat

frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: Chat.vue  ChatInput.vue  Message.vue  Messages.vue
server/: .gitignore  Pipfile  alembic.ini  pyproject.toml  run.sh
server/migrations/: env.py
server/migrations/versions/: eb6c5a84e884_add_timestamp_to_message.py  fb85f24f4082_init.py
server/src/: connection_manager.py  main.py  models.py  schemas.py
server/src/app/: db.py  settings.py
