[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Alex Kvasha <alex_kvasha@tut.by>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
websocket = "^0.2.1"
sqlmodel = "^0.0.4"
asyncpg = "^0.25.0"
python-dotenv = "^0.19.2"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
